# text-similarity

./: setup.cfg  setup.py
libindic/textsimilarity/: __init__.py  core.py
libindic/textsimilarity/templates/: libindic.textsimilarity.html
textsimilarity/: __init__.py  core.py  expose.py
textsimilarity/templates/: textsimilarity.html
