[metadata]
name = textsimilarity
author = Santhosh Thottingal
author-email = santhosh.thottingal@gmail.com
summary = Compare text and get a match score
license = LGPL-3.0
description-file =
  README.rst
home-page = https://libindic.org/payyans
requires-python = >=2.7
classifier =
  Development Status :: 5 - Production/Stable
  License :: DFSG approved
  License :: OSI Approved :: GNU Lesser General Public License v2 or later (LGPLv2+)
  Operating System :: OS Independent
  Intended Audience :: Developers
  Intended Audience :: Information Technology
  Programming Language :: Python

[files]
packages =
 textsimilarity

[entry_points]
libindic.api.rest =
    compare = textsimilarity.expose:compare

[wheel]
universal=1
    
